chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11887,3 +11887,66 @@
   timeWait: 45 mins
   timeBuild: 5 mins
   timeTotal: 50 mins
+- name: devspaces-idea-rhel8
+  tag: 3.13-4.1713808868
+  taskId: 60690082
+  timeCreate: Mon Apr 22 18:01:08 2024
+  timeStart: Mon Apr 22 18:02:00 2024
+  timeFinish: Mon Apr 22 18:19:01 2024
+  timeWait: 0 mins
+  timeBuild: 17 mins
+  timeTotal: 17 mins
+- name: devspaces-idea-rhel8
+  tag: 3.13-4.1713812607
+  taskId: 60691570
+  timeCreate: Mon Apr 22 19:03:27 2024
+  timeStart: Mon Apr 22 19:03:58 2024
+  timeFinish: Mon Apr 22 19:19:48 2024
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 16 mins
+- name: devspaces-udi-rhel8
+  tag: 3.13-7.1713837360
+  taskId: 60701941
+  timeCreate: Tue Apr 23 01:56:00 2024
+  timeStart: Tue Apr 23 01:56:37 2024
+  timeFinish: Tue Apr 23 02:55:55 2024
+  timeWait: 0 mins
+  timeBuild: 59 mins
+  timeTotal: 59 mins
+- name: devspaces-idea-rhel8
+  tag: 3.13-4.1713845038
+  taskId: 60704450
+  timeCreate: Tue Apr 23 04:03:58 2024
+  timeStart: Tue Apr 23 04:06:03 2024
+  timeFinish: Tue Apr 23 04:25:49 2024
+  timeWait: 2 mins
+  timeBuild: 19 mins
+  timeTotal: 21 mins
+- name: devspaces-udi-rhel8
+  tag: 3.13-7.1713845104
+  taskId: 60704487
+  timeCreate: Tue Apr 23 04:05:04 2024
+  timeStart: Tue Apr 23 04:06:04 2024
+  timeFinish: Tue Apr 23 05:06:16 2024
+  timeWait: 1 mins
+  timeBuild: 60 mins
+  timeTotal: 61 mins
+- name: devspaces-code-rhel8
+  tag: 3.13-48
+  taskId: 60780670
+  timeCreate: Thu Apr 25 10:15:58 2024
+  timeStart: Thu Apr 25 10:16:50 2024
+  timeFinish: Thu Apr 25 14:51:39 2024
+  timeWait: 0 mins
+  timeBuild: 274 mins
+  timeTotal: 275 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-109
+  taskId: 60789335
+  timeCreate: Thu Apr 25 15:22:47 2024
+  timeStart: Thu Apr 25 15:44:30 2024
+  timeFinish: Thu Apr 25 15:50:19 2024
+  timeWait: 21 mins
+  timeBuild: 5 mins
+  timeTotal: 27 mins
