--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -547,13 +547,13 @@
     "Errata": {
       "3.12": "127262",
       "3.13": "129116",
-      "3.14": "n/a",
+      "3.14": "131099",
       "3.x": "n/a"
     },
     "Epic": {
       "3.12": "CRW-5680",
       "3.13": "CRW-6008",
-      "3.14": "n/a",
+      "3.14": "CRW-6294",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
@@ -630,12 +630,14 @@
         "v4.12"
       ],
       "3.14": [
+        "v4.16",
         "v4.15",
         "v4.14",
         "v4.13",
         "v4.12"
       ],
       "3.x": [
+        "v4.16",
         "v4.15",
         "v4.14",
         "v4.13",
