--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11788,3 +11788,21 @@
   timeWait: 17 mins
   timeBuild: 5 mins
   timeTotal: 22 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.14-38
+  taskId: 61017875
+  timeCreate: Sat May 4 22:26:16 2024
+  timeStart: Sat May 4 22:27:01 2024
+  timeFinish: Sat May 4 22:35:54 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-6
+  taskId: 61017900
+  timeCreate: Sat May 4 22:42:35 2024
+  timeStart: Sat May 4 22:42:51 2024
+  timeFinish: Sat May 4 22:46:52 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
