--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11842,3 +11842,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.14-40
+  taskId: 61053144
+  timeCreate: Mon May 6 22:23:58 2024
+  timeStart: Mon May 6 22:27:31 2024
+  timeFinish: Mon May 6 22:36:47 2024
+  timeWait: 3 mins
+  timeBuild: 9 mins
+  timeTotal: 12 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-9
+  taskId: 61053296
+  timeCreate: Mon May 6 22:43:54 2024
+  timeStart: Mon May 6 22:44:26 2024
+  timeFinish: Mon May 6 22:48:23 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
