--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11950,6 +11950,15 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.14-12
+  taskId: 61104611
+  timeCreate: Wed May 8 22:11:14 2024
+  timeStart: Wed May 8 22:11:48 2024
+  timeFinish: Thu May 9 02:38:09 2024
+  timeWait: 0 mins
+  timeBuild: 266 mins
+  timeTotal: 266 mins
 - name: devspaces-devfileregistry-rhel8
   tag: 3.14-42
   taskId: 61104680
@@ -11965,6 +11974,15 @@
   timeCreate: Wed May 8 22:58:11 2024
   timeStart: Wed May 8 22:59:08 2024
   timeFinish: Wed May 8 23:03:33 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-16
+  taskId: 61106138
+  timeCreate: Thu May 9 02:56:17 2024
+  timeStart: Thu May 9 02:57:01 2024
+  timeFinish: Thu May 9 03:01:23 2024
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
