--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -11977,6 +11977,15 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-code-rhel8
+  tag: 3.14-13
+  taskId: 61106006
+  timeCreate: Thu May 9 02:42:23 2024
+  timeStart: Thu May 9 02:43:16 2024
+  timeFinish: Thu May 9 07:23:34 2024
+  timeWait: 0 mins
+  timeBuild: 280 mins
+  timeTotal: 281 mins
 - name: devspaces-operator-bundle
   tag: 3.14-16
   taskId: 61106138
@@ -11986,3 +11995,12 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-17
+  taskId: 61109174
+  timeCreate: Thu May 9 07:30:47 2024
+  timeStart: Thu May 9 07:30:57 2024
+  timeFinish: Thu May 9 07:35:25 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
