--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12157,3 +12157,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.14-2
+  taskId: 61259734
+  timeCreate: Wed May 15 16:03:59 2024
+  timeStart: Wed May 15 17:59:53 2024
+  timeFinish: Wed May 15 18:06:42 2024
+  timeWait: 115 mins
+  timeBuild: 6 mins
+  timeTotal: 122 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.14-3
+  taskId: 61259854
+  timeCreate: Wed May 15 16:10:56 2024
+  timeStart: Wed May 15 17:49:54 2024
+  timeFinish: Wed May 15 18:05:40 2024
+  timeWait: 98 mins
+  timeBuild: 15 mins
+  timeTotal: 114 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-27
+  taskId: 61261844
+  timeCreate: Wed May 15 18:19:01 2024
+  timeStart: Wed May 15 19:49:21 2024
+  timeFinish: Wed May 15 19:53:27 2024
+  timeWait: 90 mins
+  timeBuild: 4 mins
+  timeTotal: 94 mins
