--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12202,3 +12202,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.14-51
+  taskId: 61330035
+  timeCreate: Sun May 19 22:24:15 2024
+  timeStart: Sun May 19 22:24:21 2024
+  timeFinish: Sun May 19 22:33:39 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-29
+  taskId: 61330093
+  timeCreate: Sun May 19 22:40:33 2024
+  timeStart: Sun May 19 22:41:00 2024
+  timeFinish: Sun May 19 22:45:01 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
