--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -12256,3 +12256,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.14-4
+  taskId: 61342463
+  timeCreate: Mon May 20 13:01:15 2024
+  timeStart: Mon May 20 13:01:32 2024
+  timeFinish: Mon May 20 13:18:35 2024
+  timeWait: 0 mins
+  timeBuild: 17 mins
+  timeTotal: 17 mins
+- name: devspaces-operator-bundle
+  tag: 3.14-32
+  taskId: 61342594
+  timeCreate: Mon May 20 13:26:27 2024
+  timeStart: Mon May 20 13:27:18 2024
+  timeFinish: Mon May 20 13:31:30 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
